# WisePenCloud-AI

./: .gitignore  Dockerfile  Jenkinsfile  LICENSE  README.md  docker-compose-app.legacy-net.yml  docker-compose-app.yml  package-lock.json  package.json
mock-frontend/: index.html  (+2 more)
services/wisepen-chat-service/: pyproject.toml
services/wisepen-chat-service/src/chat/: .env.example  container.py  main.py
services/wisepen-chat-service/src/chat/api/: vercel_formats.py  vercel_sse_mapper.py
services/wisepen-chat-service/src/chat/application/: chat_context_assembler.py  chat_orchestrator.py  chat_post_processor.py  chat_turn_coordinator.py  chat_turn_finalizer.py  context_manager.py  llm_runner.py  model_resolver.py  query_loop_runtime.py  skill_cache_refresher.py  skill_matcher.py
services/wisepen-chat-service/src/chat/bootstrap/: __init__.py  init_model.py
services/wisepen-chat-service/src/chat/scripts/: seed_demo_skills.py
services/wisepen-chat-service/test/: test_browse_interact_tool.py  test_browse_url_tool.py  test_chat_service.py  test_local_fetcher.py  test_smart_fetcher.py  test_static_fetcher.py  test_steel_fetcher.py  test_web_fetch_real.py
services/wisepen-common/: pyproject.toml
services/wisepen-common/src/common/clients/: __init__.py  file_storage.py
services/wisepen-common/src/common/cloud/: __init__.py  nacos_client.py  service_discovery.py
services/wisepen-common/src/common/core/: exceptions.py
services/wisepen-common/src/common/http/: __init__.py  rpc_client.py
services/wisepen-common/src/common/kafka/: __init__.py  producer.py
(+76 files in other folders)
